Fix: Mobile security truncation - brute force spacer and reduced modal height

--- a/index.html
+++ b/index.html
@@ -884,6 +884,9 @@
                                     确认注销
                                 </button>
                             </div>
+
+                            <!-- Brute Force Spacer to ensure scrolling works -->
+                            <div style="height: 120px; width: 100%; clear: both;"></div>
                         </div>
                     </div>
                 </div>
