Fix: Mobile security truncation - override flip container styles to allow natural height growth

--- a/index.html
+++ b/index.html
@@ -885,8 +885,8 @@
                                 </button>
                             </div>
 
-                            <!-- Brute Force Spacer to ensure scrolling works -->
-                            <div style="height: 120px; width: 100%; clear: both;"></div>
+                            <!-- Spacer for bottom padding -->
+                            <div style="height: 50px; width: 100%; clear: both;"></div>
                         </div>
                     </div>
                 </div>
