Polish: Fix background height, guestbook layout/loading, and security padding

--- a/guestbook.html
+++ b/guestbook.html
@@ -64,6 +64,12 @@
             .guestbook-main {
                 padding: 0 15px !important;
             }
+
+            .message-container {
+                column-count: 2 !important;
+                /* Enable 2 columns on mobile */
+                column-gap: 15px;
+            }
         }
 
         /* Entrance animation - Removed local slideInUp to use global fadeInUpElastic */
