--- a/index.html
+++ b/index.html
@@ -885,8 +885,7 @@
                                 </button>
                             </div>
 
-                            <!-- Spacer for bottom padding -->
-                            <div style="height: 50px; width: 100%; clear: both;"></div>
+                            <!-- Spacer removed as requested -->
                         </div>
                     </div>
                 </div>
