Fix: Corrected column counts (Desktop 4, Tablet 2) and updated asset versions for cache busting

--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
         })();
     </script>
     <!-- LeanCloud SDK -->
+    <!-- LeanCloud SDK -->
     <script src="https://cdn.jsdelivr.net/npm/leancloud-storage@4.15.2/dist/av-min.js"></script>
     <script src="./leancloud-init.js?v=1764163660" defer></script>
     <script src="./leancloud-auth-functions.js?v=NO_AUTO_SELECT_V1" defer></script>
-    <script src="./leancloud-guestbook-functions.js?v=1764163660" defer></script>
+    <script src="./leancloud-guestbook-functions.js?v=NESTED_COMMENTS_V2" defer></script>
     <script src="./security-cards.js?v=CLEAN_V1" defer></script>
 
     <!-- Google Sign-In SDK -->
