--- a/guestbook.html
+++ b/guestbook.html
@@ -193,9 +193,9 @@
     <script src="https://cdn.jsdelivr.net/npm/leancloud-storage@4.15.2/dist/av-min.js"></script>
     <script src="./leancloud-init.js?v=20251125_ACL_FIX" defer></script>
     <script src="./leancloud-auth-functions.js?v=20251125_ACL_FIX" defer></script>
-    <script src="./leancloud-guestbook-functions.js?v=20251125_ACL_FIX" defer></script>
+    <script src="./leancloud-guestbook-functions.js?v=NESTED_COMMENTS_V2" defer></script>
     <script src="script.js?v=20251125_ACL_FIX" defer></script>
-    <script src="guestbook.js?v=20251125_ACL_FIX" defer></script>
+    <script src="guestbook.js?v=MENTION_FIX_V1" defer></script>
 </body>
 
 </html>
