Fix: Moved comment styles to global scope, enforced desktop 4-column layout

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
     <!-- Google OAuth Implementation -->
     <script src="./google-oauth.js?v=20251126_CORRECT_CLIENT_ID" defer></script>
 
+    <!-- Main Styles -->
+    <link rel="stylesheet" href="style.css?v=FORCE_FIX_V3">
+
     <style>
         /* Homepage entrance animation - Subtle */
         @keyframes slideInUp {
