--- a/guestbook.html
+++ b/guestbook.html
@@ -204,7 +204,7 @@
     <script src="./leancloud-auth-functions.js?v=20251125_ACL_FIX" defer></script>
     <script src="./leancloud-guestbook-functions.js?v=NESTED_COMMENTS_V2" defer></script>
     <script src="script.js?v=20251125_ACL_FIX" defer></script>
-    <script src="guestbook.js?v=NO_MAGNETIC_V4" defer></script>
+    <script src="guestbook.js?v=TOGGLE_FIX_V5" defer></script>
 </body>
 
 </html>
