Debug: Added logs and validation to trace nested comment failure

--- a/guestbook.html
+++ b/guestbook.html
@@ -204,7 +204,7 @@
     <script src="./leancloud-auth-functions.js?v=20251125_ACL_FIX" defer></script>
     <script src="./leancloud-guestbook-functions.js?v=NESTED_COMMENTS_V2" defer></script>
     <script src="script.js?v=20251125_ACL_FIX" defer></script>
-    <script src="guestbook.js?v=MENTION_FIX_V8" defer></script>
+    <script src="guestbook.js?v=DEBUG_CLICK_V9" defer></script>
 </body>
 
 </html>
