--- a/guestbook.html
+++ b/guestbook.html
@@ -162,7 +162,7 @@
     </div>
     <!-- Floating Back Button -->
     <a href="index.html" class="floating-back-btn">
-        <i class="fa-solid fa-house"></i>返回首页
+        <i class="fa-solid fa-house"></i>
     </a>
     <!-- Floating Clear Button -->
     <button id="clearAllBtn" class="floating-clear-btn" title="清空所有留言">
@@ -205,6 +205,7 @@
     <script src="./leancloud-guestbook-functions.js?v=NESTED_COMMENTS_V2" defer></script>
     <script src="script.js?v=20251125_ACL_FIX" defer></script>
     <script src="guestbook.js?v=DEBUG_CLICK_V9" defer></script>
+    <script src="guestbook-hover-effect.js" defer></script>
 </body>
 
 </html>
