--- a/guestbook.html
+++ b/guestbook.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
-        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+        content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover, interactive-widget=resizes-visual">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
@@ -15,7 +15,11 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Outfit:wght@500;700;800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css?v=1764209104">
+    <link rel="stylesheet" href="security-cards.css?v=DARK_BG_INPUTS_V1">
+    <link rel="stylesheet" href="login_styles.css?v=DARK_BG_INPUTS_V1">
+    <link rel="stylesheet" href="login_dual_mode.css?v=DARK_BG_INPUTS_V1">
+    <link rel="stylesheet" href="avatar-fix.css?v=UNIFIED_HOVER_V2">
+    <link rel="stylesheet" href="style.css?v=5_COLUMNS_FIX">
     <style>
         /* Force 4 columns - Override any conflicts */
         .guestbook-main {
@@ -36,7 +40,7 @@
         /* Apply animation to wrapper (JS generates wrapper with inline delay) */
         .message-anim-wrapper {
             opacity: 0;
-            transform: translateY(30px);
+            transform: translateY(-30px);
             transition: opacity 0.6s ease, transform 0.6s cubic-bezier(0.34, 1.56, 0.64, 1);
             /* Delay is set inline by JS via transition-delay */
         }
@@ -55,13 +59,20 @@
             width: 100% !important;
         }
 
-        /* Remove old nth-child rules - JS sets delay dynamically */
+
 
         /* Ensure responsive doesn't override */
         @media (min-width: 1441px) {
-            .message-container {
+            body .guestbook-main .message-container {
                 column-count: 5 !important;
-                /* FORCE 5 COLUMNS */
+                /* FORCE 5 COLUMNS - Higher specificity */
+                column-gap: 20px !important;
+            }
+        }
+
+        @media (max-width: 1440px) and (min-width: 1025px) {
+            body .guestbook-main .message-container {
+                column-count: 4 !important;
                 column-gap: 20px !important;
             }
         }
@@ -86,7 +97,7 @@
             }
         }
 
-        /* Entrance animation - Removed local slideInUp to use global fadeInUpElastic */
+
 
         /* Exit animation */
         @keyframes fadeOutDown {
@@ -122,6 +133,62 @@
             input[type="password"] {
                 font-size: 16px !important;
             }
+        }
+
+
+        /* ⚡ CRITICAL FIX: Force dark text on white cards - 柔和配色 */
+        .message-item .author-name {
+            color: rgba(0, 0, 0, 0.7) !important;
+        }
+
+        .message-item .message-time {
+            color: rgba(0, 0, 0, 0.4) !important;
+        }
+
+        .message-item .message-content {
+            color: rgba(0, 0, 0, 0.85) !important;
+        }
+
+        .message-item .action-btn,
+        .message-item .like-btn,
+        .message-item .comment-btn {
+            color: rgba(0, 0, 0, 0.5) !important;
+        }
+
+        .message-item .action-btn:hover,
+        .message-item .like-btn:hover,
+        .message-item .comment-btn:hover {
+            color: rgba(0, 0, 0, 0.75) !important;
+        }
+
+        /* ⚡ CRITICAL FIX: Ensure active like button is RED */
+        .message-item .like-btn.active,
+        .message-item .like-btn.active:hover {
+            color: #ef4444 !important;
+        }
+
+        .comment-item .comment-author {
+            color: rgba(0, 0, 0, 0.7) !important;
+        }
+
+        .comment-item .comment-time {
+            color: rgba(0, 0, 0, 0.4) !important;
+        }
+
+        .comment-item .comment-content {
+            color: rgba(0, 0, 0, 0.85) !important;
+        }
+
+        .comment-count-group {
+            color: rgba(0, 0, 0, 0.6) !important;
+        }
+
+        .comment-toggle-btn {
+            color: rgba(0, 0, 0, 0.6) !important;
+        }
+
+        .add-comment-trigger-btn {
+            color: rgba(0, 0, 0, 0.6) !important;
         }
     </style>
     <script>
@@ -181,31 +248,41 @@
     </div>
     <!-- Comment Modal -->
     <div class="modal-overlay" id="commentModal" onclick="closeCommentModal(event)">
-        <div class="modal-content premium-modal" style="position: relative; max-width: 500px;">
-            <!-- Mac Window Controls -->
+        <div class="modal-content comment-modal-content">
+            <!-- Mac-style close button -->
             <div class="mac-controls">
-                <div class="mac-dot red" onclick="closeCommentModal(event)"><i class="fas fa-times"></i></div>
+                <div class="mac-dot red" onclick="closeCommentModal(event)">
+                    <i class="fas fa-times"></i>
+                </div>
             </div>
-            <div class="modal-title">发表评论</div>
-            <p class="modal-subtitle">分享您的想法 </p>
-            <form id="commentForm">
+
+            <h2 class="modal-title">发表评论</h2>
+
+            <form id="commentForm" class="add-comment-form">
                 <input type="hidden" id="commentMessageId">
                 <input type="hidden" id="commentParentId">
-                <div class="form-group"><label for="commentContent">评论内容</label><textarea id="commentContent" rows="3"
-                        placeholder="写下你的评论..." required></textarea></div>
-                <div class="form-actions"><button type="submit" class="submit-btn">发送</button>
-                </div>
+                <textarea id="commentContent" placeholder="写下您的评论..." rows="3" required></textarea>
+                <button type="submit" class="submit-btn">
+                    <i class="fa-solid fa-paper-plane"></i>
+                    发送
+                </button>
             </form>
         </div>
     </div>
+    <!-- Force Input Background Fix -->
+    <script src="./force-input-bg-fix.js?v=3" defer></script>
+
     <!-- LeanCloud SDK -->
     <script src="https://cdn.jsdelivr.net/npm/leancloud-storage@4.15.2/dist/av-min.js"></script>
     <script src="./leancloud-init.js?v=20251125_ACL_FIX" defer></script>
     <script src="./leancloud-auth-functions.js?v=20251125_ACL_FIX" defer></script>
     <script src="./leancloud-guestbook-functions.js?v=NESTED_COMMENTS_V2" defer></script>
     <script src="script.js?v=20251125_ACL_FIX" defer></script>
-    <script src="guestbook.js?v=DEBUG_CLICK_V9" defer></script>
+    <script src="guestbook-v2.js" defer></script>
     <script src="guestbook-hover-effect.js" defer></script>
+    <script src="inject-auth.js?v=12" defer></script>
+    <script src="prevent-zoom.js?v=20251130" defer></script>
+    <script src="image-zoom.js?v=20251130_FIX" defer></script>
 </body>
 
 </html>
