fix: use timestamp version for guestbook.js to avoid deployment issues

--- a/guestbook.html
+++ b/guestbook.html
@@ -278,7 +278,7 @@
     <script src="./leancloud-auth-functions.js?v=20251125_ACL_FIX" defer></script>
     <script src="./leancloud-guestbook-functions.js?v=NESTED_COMMENTS_V2" defer></script>
     <script src="script.js?v=20251125_ACL_FIX" defer></script>
-    <script src="guestbook-v2.js" defer></script>
+    <script src="guestbook.js?v=1764485873" defer></script>
     <script src="guestbook-hover-effect.js" defer></script>
     <script src="inject-auth.js?v=12" defer></script>
     <script src="prevent-zoom.js?v=20251130" defer></script>
