--- a/gemini_binding.html
+++ b/gemini_binding.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css?v=DARK_BG_INPUTS_V1">
     <style>
         /* Override body flex layout for long scrolling content */
         body {
@@ -153,7 +153,7 @@
     </div>
 
     <a href="index.html" class="floating-back-btn">
-        <i class="fa-solid fa-house"></i> 返回主页
+        <i class="fa-solid fa-house"></i>
     </a>
 
     <div class="article-container">
@@ -221,6 +221,7 @@
     </div>
 
     <script src="script.js"></script>
+    <script src="inject-auth.js?v=12" defer></script>
 </body>
 
 </html>
