--- a/gemini_guide.html
+++ b/gemini_guide.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css?v=DARK_BG_INPUTS_V1">
     <style>
         /* Override body flex layout for long scrolling content */
         body {
@@ -105,8 +105,7 @@
                 });
             }
 
-            // Smooth scroll inertia effect REMOVED to fix twitching
-            // The native scroll is smoother and doesn't cause repaints/jitters.
+
         });
     </script>
 </head>
@@ -119,7 +118,7 @@
     </div>
 
     <a href="index.html" class="floating-back-btn">
-        <i class="fa-solid fa-house"></i> 返回主页
+        <i class="fa-solid fa-house"></i>
     </a>
 
     <div class="article-container">
@@ -393,14 +392,13 @@
                         alt="image">
                 </div>
 
-                <p><s>👋辅助邮箱`：`@drmail.in 结尾的</s></p>
-                <p><s>5. 辅助邮箱登录</s></p>
-                <p><s>@drmail.in结尾的辅助邮箱地址：生成进入，改成自己的号，打钩确定，发送验证码，刷新接到 https://moakt.com/</s></p>
+
             </div>
         </div>
     </div>
 
     <script src="script.js"></script>
+    <script src="inject-auth.js?v=12" defer></script>
 </body>
 
 </html>
