--- a/guestbook.html
+++ b/guestbook.html
@@ -40,8 +40,10 @@
         /* Apply animation to wrapper (JS generates wrapper with inline delay) */
         .message-anim-wrapper {
             opacity: 0;
-            transform: translateY(-30px);
-            transition: opacity 0.6s ease, transform 0.6s cubic-bezier(0.34, 1.56, 0.64, 1);
+            transform: translateY(30px);
+            /* Start from below */
+            transition: opacity 0.8s ease, transform 0.8s cubic-bezier(0.2, 0.8, 0.2, 1);
+            /* Smooth float up */
             /* Delay is set inline by JS via transition-delay */
         }
 
