style: enhance guestbook float animation
- Increase duration to 1.2s for more elegance
- Increase float distance to 60px for more dramatic effect

--- a/guestbook.html
+++ b/guestbook.html
@@ -40,10 +40,10 @@
         /* Apply animation to wrapper (JS generates wrapper with inline delay) */
         .message-anim-wrapper {
             opacity: 0;
-            transform: translateY(30px);
-            /* Start from below */
-            transition: opacity 0.8s ease, transform 0.8s cubic-bezier(0.2, 0.8, 0.2, 1);
-            /* Smooth float up */
+            transform: translateY(60px);
+            /* Start from further below */
+            transition: opacity 1.2s ease, transform 1.2s cubic-bezier(0.2, 0.8, 0.2, 1);
+            /* Slower, smoother float */
             /* Delay is set inline by JS via transition-delay */
         }
 
