style: replace fa-user-circle with fa-user in index.html to match inject-auth

--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
     <div class="top-right-nav" style="position: fixed; top: 30px; right: 40px; z-index: 2100;">
         <button id="authBtn" class="login-trigger-btn" onclick="window.toggleAuthMenu(event)">
             <!-- Default Icon (shown when logged out) -->
-            <i id="defaultAuthIcon" class="fas fa-user-circle" style="font-size: 1.2rem;"></i>
+            <i id="defaultAuthIcon" class="fas fa-user" style="font-size: 1.2rem;"></i>
 
             <!-- User Avatar (shown when logged in) -->
             <img id="navUserAvatar" class="nav-user-avatar" src="" alt="Avatar" style="display: none;">
