Update tooltip styles: white card design, purple accents, and visibility fixes

--- a/gemini_binding.html
+++ b/gemini_binding.html
@@ -146,6 +146,8 @@
 </head>
 
 <body>
+    <!-- Dropdown Blur Overlay -->
+    <div class="dropdown-overlay" id="dropdownOverlay"></div>
     <div class="background-blobs">
         <div class="blob blob-1"></div>
         <div class="blob blob-2"></div>
@@ -221,7 +223,7 @@
     </div>
 
     <script src="script.js"></script>
-    <script src="inject-auth.js?v=12" defer></script>
+    <script src="inject-auth.js?v=13_FORGOT_EMAIL" defer></script>
 </body>
 
 </html>
