--- a/guestbook.html
+++ b/guestbook.html
@@ -210,6 +210,9 @@
 </head>
 
 <body class="guestbook-page">
+    <!-- Dropdown Blur Overlay -->
+    <div class="dropdown-overlay" id="dropdownOverlay"></div>
+
     <!-- Background Blobs -->
     <div class="background-blobs">
         <div class="blob blob-1"></div>
@@ -263,9 +266,9 @@
     <script src="./leancloud-auth-functions.js?v=20251125_ACL_FIX" defer></script>
     <script src="./leancloud-guestbook-functions.js?v=NESTED_COMMENTS_V2" defer></script>
     <script src="script.js?v=20251125_ACL_FIX" defer></script>
-    <script src="guestbook.js?v=1764485873" defer></script>
+    <script src="guestbook.js?v=FIX_LAYOUT_V5" defer></script>
     <script src="guestbook-hover-effect.js" defer></script>
-    <script src="inject-auth.js?v=12" defer></script>
+    <script src="inject-auth.js?v=1733030269" defer></script>
     <script src="prevent-zoom.js?v=20251130" defer></script>
     <script src="image-zoom.js?v=20251130_FIX" defer></script>
 </body>
