--- a/google_guide.html
+++ b/google_guide.html
@@ -109,6 +109,8 @@
 </head>
 
 <body>
+    <!-- Dropdown Blur Overlay -->
+    <div class="dropdown-overlay" id="dropdownOverlay"></div>
     <div class="background-blobs">
         <div class="blob blob-1"></div>
         <div class="blob blob-2"></div>
@@ -191,7 +193,7 @@
     </div>
 
     <script src="script.js"></script>
-    <script src="inject-auth.js?v=12" defer></script>
+    <script src="inject-auth.js?v=13_FORGOT_EMAIL" defer></script>
 </body>
 
 </html>
