--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Outfit:wght@500;700;800&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <!-- <link rel="stylesheet" href="style.css?v=FIX_LAYOUT_SHIFT_MODAL"> -->
+
     <link rel="stylesheet" href="security-cards.css?v=DARK_BG_INPUTS_V1">
     <link rel="stylesheet" href="login_styles.css?v=DARK_BG_INPUTS_V1">
     <link rel="stylesheet" href="login_dual_mode.css?v=DARK_BG_INPUTS_V1">
@@ -28,7 +28,7 @@
         })();
     </script>
     <!-- LeanCloud SDK -->
-    <!-- LeanCloud SDK -->
+
     <script src="https://cdn.jsdelivr.net/npm/leancloud-storage@4.15.2/dist/av-min.js"></script>
     <script src="./leancloud-init.js?v=1764163660" defer></script>
     <script src="./leancloud-auth-functions.js?v=NO_AUTO_SELECT_V1" defer></script>
@@ -45,7 +45,7 @@
     <script src="./force-input-bg-fix.js?v=3" defer></script>
 
     <!-- Main Styles -->
-    <link rel="stylesheet" href="style.css?v=DARK_BG_INPUTS_V1">
+    <link rel="stylesheet" href="style.css?v=CONTACT_POPUP_FIX_V8">
 
     <style>
         /* Homepage entrance animation - Subtle */
@@ -213,13 +213,16 @@
 </head>
 
 <body class="shop-page">
+    <!-- Dropdown Blur Overlay -->
+    <div class="dropdown-overlay" id="dropdownOverlay"></div>
+
     <div class="background-blobs">
         <div class="blob blob-1"></div>
         <div class="blob blob-2"></div>
         <div class="blob blob-3"></div>
     </div>
 
-    <!-- Dropdown Backdrop Removed -->
+
 
     <div class="main-wrapper">
         <div class="bento-container">
@@ -303,7 +306,7 @@
                 <div class="mac-dot green"></div>
             </div>
             <div class="modal-title">留言板</div>
-            <!-- Subtitle removed -->
+
 
             <form class="guestbook-form" id="guestbookForm">
                 <div class="input-group relative-container">
@@ -352,28 +355,26 @@
             </div>
 
             <div class="modal-title">联系我们</div>
-            <p class="modal-subtitle">
-                选择您喜欢的联系方式
-            </p>
+
 
             <div class="modal-grid">
+                <!-- Email Card -->
                 <!-- Email Card -->
                 <div class="modal-link-card" onclick="copyText('zaoyoe@gmail.com'); event.stopPropagation();"
                     style="cursor: pointer;">
                     <i class="fa-solid fa-envelope"></i>
-                    <div class="link-title">电子邮箱</div>
-                    <div class="contact-detail" style="font-size: 0.9rem; opacity: 0.8; margin-top: 5px;">
-                        zaoyoe@gmail.com</div>
-                    <div class="contact-hint" style="font-size: 0.75rem; opacity: 0.5; margin-top: 2px;">(点击复制)
+                    <div class="contact-popup email-popup">
+                        <div class="contact-detail">zaoyoe@gmail.com</div>
+                        <div class="contact-hint">(点击复制)</div>
                     </div>
                 </div>
 
                 <!-- WeChat Card -->
                 <div class="modal-link-card">
                     <i class="fa-brands fa-weixin"></i>
-                    <div class="link-title">微信联系</div>
-                    <img src="assets/wechat-qr-new.jpg" alt="WeChat QR"
-                        style="width: 120px; height: 120px; border-radius: 12px; margin-top: 10px; box-shadow: 0 4px 12px rgba(0,0,0,0.3);">
+                    <div class="contact-popup">
+                        <img src="assets/wechat-qr-new.jpg" alt="WeChat QR" class="qr-code">
+                    </div>
                 </div>
             </div>
         </div>
@@ -516,10 +517,113 @@
                         <input type="password" id="login-password" class="glass-input" placeholder="密码" required>
                     </div>
 
-                    <!-- Forgot Password Link -->
-                    <div style="text-align: right; margin-bottom: 16px;">
-                        <span class="forgot-password-link" onclick="switchAuthView('reset')">忘记密码了吗？</span>
+                    <!-- Auth Links Row -->
+                    <div class="auth-links-row"
+                        style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 16px; font-size: 13px;">
+
+                        <!-- Forgot Email (Left) with Tooltip -->
+                        <div class="forgot-email-wrapper" style="position: relative; cursor: help;">
+                            <span style="color: rgba(255, 255, 255, 0.5); transition: color 0.3s;">忘记邮箱？</span>
+
+                            <!-- Tooltip -->
+                            <div class="email-tooltip"
+                                style="display: none; position: absolute; bottom: 100%; left: 0; width: 280px; height: 172px; background: #ffffff; border: 1px solid rgba(0, 0, 0, 0.08); border-radius: 24px; padding: 0 24px; color: #334155; z-index: 2147483647 !important; box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2); text-align: center; margin-bottom: 12px; pointer-events: auto;">
+                                <!-- Bridge to prevent closing on gap hover -->
+                                <div style="position: absolute; top: 100%; left: 0; width: 100%; height: 16px;"></div>
+
+                                <div style="display: flex; flex-direction: column; align-items: center; width: 100%;">
+                                    <div style="font-size: 13px; color: #475569; font-weight: 500; margin-bottom: 4px;">
+                                        请联系客服找回</div>
+
+                                    <a href="mailto:zaoyoe@gmail.com"
+                                        style="font-size: 16px; color: #1e1b4b; text-decoration: none; font-weight: 700; letter-spacing: 0.5px; margin-bottom: 16px;">zaoyoe@gmail.com</a>
+
+                                    <div onclick="copyRecoveryInfo(this)"
+                                        style="font-size: 13px; color: #9b5de5; cursor: pointer; display: flex; align-items: center; gap: 8px; transition: all 0.2s; background: transparent; padding: 8px 16px; border-radius: 20px; border: 1px solid rgba(155, 93, 229, 0.3);">
+                                        <i class="fas fa-copy" style="color: #9b5de5;"></i> <span>复制邮件内容模版</span>
+                                    </div>
+                                </div>
+
+                                <!-- Arrow -->
+                                <div
+                                    style="position: absolute; bottom: -6px; left: 24px; width: 12px; height: 12px; background: #ffffff; transform: rotate(45deg); border-right: 1px solid rgba(0, 0, 0, 0.08); border-bottom: 1px solid rgba(0, 0, 0, 0.08); z-index: -1;">
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Forgot Password (Right) -->
+                        <span class="forgot-password-link" onclick="switchAuthView('reset')"
+                            style="cursor: pointer;">忘记密码？</span>
                     </div>
+
+                    <script>
+                        function copyRecoveryInfo(btn) {
+                            const text = "请帮我找回邮箱，我的信息如下：\\n\\n1. 用户名 (Username)：\\n2. 曾在留言板发布的评论内容/时间：\\n3. 大致注册时间 (年/月)：\\n4. 大致最后登录时间：";
+                            navigator.clipboard.writeText(text).then(() => {
+                                const originalContent = btn.innerHTML;
+                                btn.style.background = "rgba(39, 201, 63, 0.1)";
+                                btn.style.borderColor = "#27c93f";
+                                btn.style.color = "#27c93f";
+                                btn.innerHTML = '<i class="fas fa-check"></i> <span>已复制</span>';
+                                setTimeout(() => {
+                                    btn.style.background = "transparent";
+                                    btn.style.borderColor = "rgba(155, 93, 229, 0.3)";
+                                    btn.style.color = "#9b5de5";
+                                    btn.innerHTML = originalContent;
+                                }, 2000);
+                            });
+                        }
+                    </script>
+
+                    <style>
+                        .forgot-email-wrapper {
+                            position: relative;
+                            z-index: 1;
+                            /* Base z-index */
+                        }
+
+                        .forgot-email-wrapper:hover {
+                            z-index: 2147483647 !important;
+                            /* Highest possible z-index on hover */
+                        }
+
+                        .forgot-email-wrapper:hover .email-tooltip {
+                            display: flex !important;
+                            flex-direction: column;
+                            justify-content: center;
+                            align-items: center;
+                            animation: tooltipFloat 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+                        }
+
+                        .forgot-email-wrapper:hover>span {
+                            color: rgba(255, 255, 255, 0.9) !important;
+                            border-bottom-color: rgba(255, 255, 255, 0.8) !important;
+                            text-shadow: 0 0 8px rgba(255, 255, 255, 0.3);
+                        }
+
+                        /* Hover effect for the copy button */
+                        .email-tooltip div[onclick]:hover {
+                            background: rgba(155, 93, 229, 0.05) !important;
+                            border-color: rgba(155, 93, 229, 0.5) !important;
+                            transform: translateY(-1px);
+                        }
+
+                        .email-tooltip div[onclick]:active {
+                            transform: translateY(0);
+                        }
+
+                        @keyframes tooltipFloat {
+                            from {
+                                opacity: 0;
+                                transform: translateY(10px) scale(0.95);
+                            }
+
+                            to {
+                                opacity: 1;
+                                transform: translateY(0) scale(1);
+                            }
+                        }
+                    </style>
 
                     <!-- Remember Me Checkbox -->
                     <div class="checkbox-wrapper"
@@ -600,7 +704,7 @@
         </div>
     </div>
 
-    <!-- Coming Soon Modal -->
+
     <!-- Profile Modal -->
     <div class="modal-overlay" id="profileModal" onmousedown="closeModal(event)" onmouseup="closeModal(event)">
         <div class="modal-content profile-modal" onclick="event.stopPropagation()">
@@ -759,9 +863,9 @@
                                 <div class="security-detail-content" id="detail-change-password" style="display: none;">
                                     <h3 class="detail-title">修改密码</h3>
                                     <input type="password" id="oldPasswordInput" placeholder="当前密码"
-                                        class="security-input">
+                                        class="security-input" autocomplete="new-password">
                                     <input type="password" id="newPasswordInput" placeholder="新密码 (至少6位)"
-                                        class="security-input">
+                                        class="security-input" autocomplete="new-password">
                                     <button class="gradient-btn" onclick="changePassword()">更新密码</button>
                                 </div>
 
@@ -806,11 +910,11 @@
                                 <h3 class="mobile-section-title">修改密码</h3>
                                 <div class="input-group">
                                     <input type="password" id="mobile_oldPassword" class="security-input"
-                                        placeholder="当前密码">
+                                        placeholder="当前密码" autocomplete="new-password">
                                 </div>
                                 <div class="input-group">
                                     <input type="password" id="mobile_newPassword" class="security-input"
-                                        placeholder="新密码 (至少6位)">
+                                        placeholder="新密码 (至少6位)" autocomplete="new-password">
                                 </div>
                                 <button class="gradient-btn" onclick="changePassword('mobile')">更新密码</button>
                             </div>
@@ -867,7 +971,7 @@
             </p>
         </div>
         <link rel="stylesheet" href="style.css?v=FIX_INPUT_AVATAR_FINAL">
-        <script src="inject-auth.js?v=12" defer></script>
+        <script src="inject-auth.js?v=1733030269" defer></script>
         <script src="prevent-zoom.js?v=20251130" defer></script>
         <!-- Elastic Press Effect -->
         <script src="elastic-press.js?v=FIX_MODAL_DETECTION" defer></script>
