feat: 完整实现WebSocket实时推送功能 - 消除二次刷新，修复所有相关bug，启用LiveQuery实时同步

--- a/guestbook.html
+++ b/guestbook.html
@@ -261,7 +261,8 @@
     <script src="./force-input-bg-fix.js?v=3" defer></script>
 
     <!-- LeanCloud SDK -->
-    <script src="https://cdn.jsdelivr.net/npm/leancloud-storage@4.15.2/dist/av-min.js"></script>
+    <!-- LeanCloud SDK with LiveQuery support -->
+    <script src="https://cdn.jsdelivr.net/npm/leancloud-storage@4.15.2/dist/av-live-query-min.js"></script>>
     <script src="./leancloud-init.js?v=20251125_ACL_FIX" defer></script>
     <script src="./leancloud-auth-functions.js?v=20251125_ACL_FIX" defer></script>
     <script src="./leancloud-guestbook-functions.js?v=NESTED_COMMENTS_V2" defer></script>
