feat: 智能缓存失效+页面可见性刷新 - 解决跨设备留言同步问题

--- a/guestbook.html
+++ b/guestbook.html
@@ -264,8 +264,14 @@
     <script src="https://cdn.jsdelivr.net/npm/leancloud-storage@4.15.2/dist/av-live-query-min.js"></script>>
     <script src="./leancloud-init.js?v=20251125_ACL_FIX" defer></script>
     <script src="./leancloud-auth-functions.js?v=20251125_ACL_FIX" defer></script>
+    <!-- LeanCloud Functions -->
     <script src="./leancloud-guestbook-functions.js?v=NESTED_COMMENTS_V2" defer></script>
     <script src="script.js?v=20251125_ACL_FIX" defer></script>
+
+    <!-- 页面可见性监听（防止 LiveQuery 断线） -->
+    <script src="guestbook-visibility-listener.js?v=1" defer></script>
+
+    <!-- 留言板 UI -->
     <script src="guestbook.js?v=FIX_LAYOUT_V5" defer></script>
     <script src="guestbook-hover-effect.js" defer></script>
     <script src="inject-auth.js?v=1733030269" defer></script>
