feat: 实现优雅的点赞LiveQuery - 原位心跳动画，保持卡片位置不变

--- a/guestbook.html
+++ b/guestbook.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="login_styles.css?v=DARK_BG_INPUTS_V1">
     <link rel="stylesheet" href="login_dual_mode.css?v=DARK_BG_INPUTS_V1">
     <link rel="stylesheet" href="avatar-fix.css?v=UNIFIED_HOVER_V2">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="live-like-animations.css?v=1">
     <link rel="stylesheet" href="style.css?v=5_COLUMNS_FIX">
     <style>
         /* Force 4 columns - Override any conflicts */
@@ -270,6 +272,9 @@
 
     <!-- 页面可见性监听（防止 LiveQuery 断线） -->
     <script src="guestbook-visibility-listener.js?v=1" defer></script>
+
+    <!-- LiveQuery 点赞订阅（优雅的原位心跳动画） -->
+    <script src="live-like-subscription.js?v=1" defer></script>
 
     <!-- 留言板 UI -->
     <script src="guestbook.js?v=FIX_LAYOUT_V5" defer></script>
