fix: 移除script标签后多余的>字符

--- a/guestbook.html
+++ b/guestbook.html
@@ -263,7 +263,7 @@
 
     <!-- LeanCloud SDK -->
     <!-- LeanCloud SDK with LiveQuery support -->
-    <script src="https://cdn.jsdelivr.net/npm/leancloud-storage@4.15.2/dist/av-live-query-min.js"></script>>
+    <script src="https://cdn.jsdelivr.net/npm/leancloud-storage@4.15.2/dist/av-live-query-min.js"></script>
     <script src="./leancloud-init.js?v=20251125_ACL_FIX" defer></script>
     <script src="./leancloud-auth-functions.js?v=20251125_ACL_FIX" defer></script>
     <!-- LeanCloud Functions -->
