--- a/guestbook.html
+++ b/guestbook.html
@@ -22,7 +22,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="live-like-animations.css?v=1">
     <link rel="stylesheet" href="capsule-styles.css?v=5.2">
-    <link rel="stylesheet" href="style.css?v=5_COLUMNS_FIX">
+    <link rel="stylesheet" href="style.css?v=MOBILE_SCROLL_FIX_V2">
     <style>
         /* Force 4 columns - Override any conflicts */
         .guestbook-main {
