fix: 实现自定义平滑滚动(1秒缓动)，优化定位动画体验

--- a/guestbook.html
+++ b/guestbook.html
@@ -294,6 +294,7 @@
     <script src="capsule-manager.js?v=5.2" defer></script>
 
     <!-- 留言板 UI -->
+    <script src="smooth-scroll.js"></script>
     <script src="guestbook.js?v=FIX_LAYOUT_V5" defer></script>
     <script src="guestbook-hover-effect.js" defer></script>
     <script src="inject-auth.js?v=1733030269" defer></script>
