--- a/guestbook.html
+++ b/guestbook.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="avatar-fix.css?v=UNIFIED_HOVER_V2">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="live-like-animations.css?v=1">
-    <link rel="stylesheet" href="capsule-styles.css?v=5.2">
+    <link rel="stylesheet" href="capsule-styles.css?v=5.4">
     <link rel="stylesheet" href="style.css?v=MOBILE_SCROLL_FIX_V2">
     <style>
         /* Force 4 columns - Override any conflicts */
@@ -287,8 +287,8 @@
     <!-- LiveQuery 点赞订阅（优雅的原位心跳动画） -->
     <script src="live-like-subscription.js?v=1" defer></script>
 
-    <!-- 智能通知胶囊管理器 (v5.2 - Fixed Refresh) -->
-    <script src="capsule-manager.js?v=5.2" defer></script>
+    <!-- 智能通知胶囊管理器 (v5.4 - Ghost Fix) -->
+    <script src="capsule-manager.js?v=5.4" defer></script>
 
     <!-- 留言板 UI -->
     <script src="smooth-scroll.js"></script>
