refactor: 彻底重构高亮动画系统 - 移除旧动画，优化明暗对比

--- a/guestbook.html
+++ b/guestbook.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="avatar-fix.css?v=UNIFIED_HOVER_V2">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="live-like-animations.css?v=1">
-    <link rel="stylesheet" href="capsule-styles.css?v=5.6">
+    <link rel="stylesheet" href="capsule-styles.css?v=5.7">
     <link rel="stylesheet" href="style.css?v=MOBILE_SCROLL_FIX_V2">
     <style>
         /* Force 4 columns - Override any conflicts */
@@ -292,7 +292,7 @@
 
     <!-- 留言板 UI -->
     <script src="smooth-scroll.js"></script>
-    <script src="guestbook.js?v=FIX_LAYOUT_V5" defer></script>
+    <script src="guestbook.js?v=ANIMATION_OVERHAUL_V1" defer></script>
     <script src="guestbook-hover-effect.js" defer></script>
     <script src="inject-auth.js?v=1733030269" defer></script>
     <script src="prevent-zoom.js?v=20251130" defer></script>
