--- a/guestbook.html
+++ b/guestbook.html
@@ -21,8 +21,8 @@
     <link rel="stylesheet" href="avatar-fix.css?v=UNIFIED_HOVER_V2">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="live-like-animations.css?v=1">
-    <link rel="stylesheet" href="capsule-styles.css?v=5.7">
-    <link rel="stylesheet" href="style.css?v=MOBILE_SCROLL_FIX_V2">
+    <link rel="stylesheet" href="capsule-styles.css?v=C_PLUS_V1">
+    <link rel="stylesheet" href="style.css?v=ELASTIC_MORPH_V1">
     <style>
         /* Force 4 columns - Override any conflicts */
         .guestbook-main {
@@ -292,7 +292,7 @@
 
     <!-- 留言板 UI -->
     <script src="smooth-scroll.js"></script>
-    <script src="guestbook.js?v=ANIMATION_OVERHAUL_V1" defer></script>
+    <script src="guestbook.js?v=C_PLUS_ELASTIC" defer></script>
     <script src="guestbook-hover-effect.js" defer></script>
     <script src="inject-auth.js?v=1733030269" defer></script>
     <script src="prevent-zoom.js?v=20251130" defer></script>
