fix: 绝杀修复(重试) - 彻底移除content-visibility恢复逻辑 + 移除嵌套圆角

--- a/guestbook.html
+++ b/guestbook.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="avatar-fix.css?v=UNIFIED_HOVER_V2">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="live-like-animations.css?v=1">
-    <link rel="stylesheet" href="capsule-styles.css?v=NESTED_FIX_V1">
+    <link rel="stylesheet" href="capsule-styles.css?v=NO_JUMP_V2">
     <link rel="stylesheet" href="style.css?v=RADIUS_GRADIENT_V1">
     <style>
         /* Force 4 columns - Override any conflicts */
@@ -292,7 +292,7 @@
 
     <!-- 留言板 UI -->
     <script src="smooth-scroll.js"></script>
-    <script src="guestbook.js?v=MOBILE_CLEANUP_FIX" defer></script>
+    <script src="guestbook.js?v=NO_CONTENT_VISIBILITY_RESTORE_V2" defer></script>
     <script src="guestbook-hover-effect.js" defer></script>
     <script src="inject-auth.js?v=1733030269" defer></script>
     <script src="prevent-zoom.js?v=20251130" defer></script>
