style: 更新CSS版本号强制刷新缓存

--- a/guestbook.html
+++ b/guestbook.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="avatar-fix.css?v=UNIFIED_HOVER_V2">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="live-like-animations.css?v=1">
-    <link rel="stylesheet" href="capsule-styles.css?v=NESTED_FIX_V1">
+    <link rel="stylesheet" href="capsule-styles.css?v=GLOW_V3">
     <link rel="stylesheet" href="style.css?v=RADIUS_GRADIENT_V1">
     <style>
         /* Force 4 columns - Override any conflicts */
