feat: 闲鱼店铺卡片添加点击跳转淘宝链接

--- a/index.html
+++ b/index.html
@@ -261,7 +261,8 @@
             </div>
 
             <!-- Xianyu Card (1x1) -->
-            <div class="glass-box box-small">
+            <div class="glass-box box-small" onclick="window.open('https://m.tb.cn/h.7bLXxwt?tk=71mMfrE5Orz', '_blank')"
+                style="cursor: pointer;">
                 <i class="fa-solid fa-fish icon-large" style="color: #ffda44;"></i>
                 <div class="box-label">闲鱼店铺</div>
             </div>
