feat: add prompt gallery link to homepage

--- a/index.html
+++ b/index.html
@@ -279,6 +279,13 @@
                 <div class="box-label">影视后期</div>
             </div>
 
+            <!-- Banana Pro Gallery (2x1) - Wide (NEW) -->
+            <a href="prompts.html" class="glass-box box-wide">
+                <!-- Magic/Feather Icon -->
+                <i class="fa-solid fa-wand-magic-sparkles icon-large" style="color: #f472b6;"></i>
+                <div class="box-label">灵感图库</div>
+            </a>
+
             <!-- Contact Card (1x1) - Clickable -->
             <div class="glass-box box-small" data-modal-target="contactModal">
                 <i class="fa-solid fa-address-card icon-large" style="color: #d946ef;"></i>
