--- a/prompts.html
+++ b/prompts.html
@@ -117,6 +117,21 @@
         </div>
     </div>
 
+    <!-- Fullscreen Gallery Modal -->
+    <div id="fullscreenGallery" class="fullscreen-gallery" onclick="closeFullscreen(event)">
+        <img id="fullscreenImg" class="fullscreen-img" src="" alt="Fullscreen view">
+        <button class="fullscreen-nav left" onclick="event.stopPropagation(); navigateFullscreen('prev')">
+            <i class="fas fa-chevron-left"></i>
+        </button>
+        <button class="fullscreen-nav right" onclick="event.stopPropagation(); navigateFullscreen('next')">
+            <i class="fas fa-chevron-right"></i>
+        </button>
+        <div class="fullscreen-counter" id="fullscreenCounter">1 / 1</div>
+        <button class="fullscreen-close" onclick="closeFullscreen(event)">
+            <i class="fas fa-times"></i>
+        </button>
+    </div>
+
     <!-- Disclaimer Footer -->
     <footer class="disclaimer-footer">
         <div class="disclaimer-content">
